--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
   <!-- Middle button group -->
   <div class="btn-group justify-content-center order-2" data-toggle="buttons">
     <button type="button" class="btn" id="go-plan">Plan pathways</button>
-    <button type="button" class="btn disabled" id="go-find">Find opportunities</button>
+    <button type="button" class="btn" id="go-find">Find opportunities</button>
   </div>
 
   <!-- Right aligned links -->
@@ -54,7 +54,7 @@
       <p>OpenElec is the best tool for creating national electrification plans and finding private sector off-grid elecrification opportunities.</p>
       <p>Choose one below:</p>
       <button type="button" class="btn btn-primary btn-lg" id="go-plan-big">Plan pathways</button>
-      <button type="button" class="btn btn-primary btn-lg disabled" id="go-find-big">Find opportunities</button>
+      <button type="button" class="btn btn-primary btn-lg" id="go-find-big">Find opportunities</button>
     </div>
   </div>
 
@@ -72,7 +72,7 @@
     <!-- Left fixed pane for parameter entry -->
     <div class="col-sm-2 fixed py-3 shad pane">
       <h5 class="ml-3 hidden-sm-down text">Lesotho</h5>
-      <button type="button" class="btn btn-primary btn-sm" id="run-model">Run model</button>
+      <button type="button" class="btn btn-primary btn-sm" id="run-model"></button>
       <button type="button" class="btn btn-secondary btn-sm disabled">Change country</button>
       <div class="py-3" id="sliders"></div>
     </div>
