Update styling on map layers

--- a/src/index.html
+++ b/src/index.html
@@ -50,9 +50,13 @@
   <!-- Landing page -->
   <div class="row flex-grow-1" id="landing">
     <div class="jumbotron w-100 h-100">
-      <h1 class="brand">OpenElec</h1>      
-      <p>OpenElec is the best tool for creating national electrification plans and finding private sector off-grid elecrification opportunities.</p>
-      <p>Choose one below:</p>
+      <h1 class="brand">OpenElec</h1>
+      <span class="d-inline-block text" style="max-width: 600px;">
+        OpenElec is a prototype for a general purpose tool for creating optimised national electricity access pathways,
+        and finding villages for private off-grid development. The tool has functionality for both national- and
+        local-level analysis.
+      </span>
+      <h3>Choose a model mode below to start exploring!</h3>
       <button type="button" class="btn btn-primary btn-lg" id="go-plan-big">Plan pathways</button>
       <button type="button" class="btn btn-primary btn-lg" id="go-find-big">Find opportunities</button>
     </div>
@@ -62,7 +66,8 @@
   <div class="row flex-grow-1 hidden" id="about">
     <div class="jumbotron w-100 h-100">
       <h1 class="brand">About OpenElec</h1>      
-      <p>This tool was created to...</p>
+      <p>This tool was created to showcase a frontend to the open source tool OpenElec, available <a href="https://github.com/carderne/openelec">here</a> on GitHub.</p>
+      <p>Development is done by Chris Arderne, with hopefully more contributors in the future.</p>
     </div>
   </div>
 
