Add simple legend

--- a/src/index.html
+++ b/src/index.html
@@ -90,6 +90,9 @@
 
     <!-- Right fixed pane for summary result display -->
     <div class="col-sm-2 fixed py-3 shad pane">
+        <h5 class="text">Map legend</h5>
+      <div id="legend"></div>
+      <br>
       <h5 class="text">Summary results</h5>
       <div id="summary"></div>
     </div>
