--- a/src/index.html
+++ b/src/index.html
@@ -62,6 +62,11 @@
     </div>
   </div>
 
+  <!-- Choose country page -->
+  <div class="row flex-grow-1 hidden" id="landing">
+    <div class="col fluid px-0"></div>
+  </div>
+
   <!-- About page -->
   <div class="row flex-grow-1 hidden" id="about">
     <div class="jumbotron w-100 h-100">
@@ -113,7 +118,7 @@
 </div>
 
 <!-- Compiled with WebPack -->
-<script type="text/javascript" src="static/main.js"></script>
+<!-- <script type="text/javascript" src="static/main.js"></script> -->
 
 </body>
 </html>
