--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,21 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>OpenElec</title>
+
+<meta name="description" content="openelec is a general tool for finding opportunities in electricity access.">
+<meta property="og:site_name" content="openelec">
+<meta property="og:type" content="website">
+<meta property="og:title" content="openelec">
+<meta property="og:description" content="openelec is a general tool for finding opportunities in electricity access.">
+<meta property="og:url" content="/">
+<meta property="og:image" content="favicon-1024.png">
+<meta name="twitter:title" content="openelec">
+<meta name="twitter:description" content="openelec is a general tool for finding opportunities in electricity access.">
+<meta name="twitter:url" content="/">
+<meta name="twitter:image" content="favicon-1024.png">
+<meta property="og:image:width" content="1920">
+<meta property="og:image:height" content="1280">
+
 </head>
 <body>
 
