--- a/src/index.html
+++ b/src/index.html
@@ -99,7 +99,7 @@
 
     <!-- Left fixed pane for parameter entry -->
     <div class="col-sm-2 fixed py-3 shad pane">
-      <h5 class="ml-3 hidden-sm-down text">Lesotho</h5>
+      <h3 class="ml-3 hidden-sm-down text">Lesotho</h3>
       <button type="button" class="btn btn-primary btn-sm" id="run-model"></button>
       <button type="button" class="btn btn-secondary btn-sm" id="change-country">Change country</button>
       <div class="py-3" id="sliders"></div>
@@ -113,11 +113,12 @@
 
     <!-- Right fixed pane for summary result display -->
     <div class="col-sm-2 fixed py-3 shad pane">
-        <h5 class="text">Map legend</h5>
+      <h3 class="text">Map legend</h3>
       <div id="legend"></div>
       <br>
-      <h5 class="text">Summary results</h5>
+      <h3 class="text">Summary results</h3>
       <div id="summary"></div>
+      <div id="chart"></div>
     </div>
   </div>
 </div>
