Hide countries on home/about

--- a/src/index.html
+++ b/src/index.html
@@ -73,7 +73,7 @@
         to find the best technologies and investments down to household level.
       </p>
       <hr class="my-4">
-      <h3>Choose a model mode below to start exploring!</h3>
+      <h3>Choose below to start exploring!</h3>
       <p class="lead">
         <button type="button" class="btn btn-primary btn-lg" id="go-plan-big">Plan pathways</button>
         <button type="button" class="btn btn-primary btn-lg" id="go-find-big">Find opportunities</button>
