Prevent d3 from jutting out of pane

--- a/src/index.html
+++ b/src/index.html
@@ -131,8 +131,7 @@
       <div id="legend"></div>
       <br>
       <h3 class="text">Summary results</h3>
-      <div id="summary"></div>
-      <div id="chart"></div>
+      <div id="summary" style="width: 100%;"></div>
     </div>
   </div>
 </div>
