Improve formatting and dynamics of results display

--- a/src/index.html
+++ b/src/index.html
@@ -113,7 +113,7 @@
 
     <!-- Left fixed pane for parameter entry -->
     <div class="col py-3 pane">
-      <h3 class="ml-3 hidden-sm-down text">Lesotho</h3>
+      <h3 class="ml-3 hidden-sm-down text country-name"></h3>
       <button type="button" class="btn btn-primary btn-sm" id="run-model"></button>
       <button type="button" class="btn btn-secondary btn-sm" id="change-country">Change country</button>
       <div class="py-3" id="sliders"></div>
@@ -127,10 +127,8 @@
 
     <!-- Right fixed pane for summary result display -->
     <div class="col py-3 pane">
-      <h3 class="text">Map legend</h3>
       <div id="legend"></div>
-      <br>
-      <h3 class="text">Summary results</h3>
+      <div id="country-overview"><</div>
       <div id="summary" style="width: 100%;"></div>
     </div>
   </div>
