Handle some awkward CSS bugs with col width/height

--- a/src/index.html
+++ b/src/index.html
@@ -109,7 +109,7 @@
   </div>
 
   <!-- Main explore page -->
-  <div class="row flex-grow-1 hidden" id="explore">
+  <div class="row flex-fill hidden" id="explore">
 
     <!-- Left fixed pane for parameter entry -->
     <div class="col py-3 pane">
