Change oobica link text

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
         <a class="brand navbar-brand pl-0" href="#" id="go-home">openelec</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="https://oobica.com">Oobica</a>
+        <a class="nav-link" href="https://oobica.com">oobica</a>
       </li>
     </ul>
   </div>
