--- a/src/index.html
+++ b/src/index.html
@@ -35,8 +35,11 @@
       <li class="nav-item active">
         <a class="brand navbar-brand pl-0" href="#" id="go-home">openelec</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="https://oobica.com">oobica</a>
+      <li class="nav-item text-light px-3">
+        by
+        <a href="https://oobica.com">
+          <img class="navbar-logo brand navbar-brand pl-0" src="oobica.png" alt="oobica">
+        </a>
       </li>
     </ul>
   </div>
