Add satellite layer switcher

--- a/src/index.html
+++ b/src/index.html
@@ -123,15 +123,15 @@
     </div>
 
     <!-- Central flexible pane for map -->
-    <div class="col-sm-8 px-0" id="map"></div>
-    <div class='map-overlay top hidden' id='map-announce-outer'>
-      <div class='map-overlay-inner' id='map-announce'></div>
+    <div class="col-sm-8 px-0" id="map">
+      <nav id="baseToggle"></nav>
+      <div id='map-announce'></div>
     </div>
-
+    
     <!-- Right fixed pane for summary result display -->
     <div class="col py-3 pane">
       <div id="legend"></div>
-      <div id="country-overview"><</div>
+      <div id="country-overview"></div>
       <div id="summary" style="width: 100%;"></div>
     </div>
   </div>
