Add download functionality

--- a/src/index.html
+++ b/src/index.html
@@ -146,7 +146,9 @@
     
     <!-- Right fixed pane for summary result display -->
     <div class="col py-3 pane">
-      <div id="legend"></div>
+      <button type="button" class="btn btn-primary btn-sm" id="download-results">Download clusters</button>
+      <a id="hiddenDownload"></a>
+      <div class="py-1" id="legend"></div>
       <div id="country-overview"></div>
       <div id="summary" style="width: 100%;"></div>
     </div>
