Add server offline warning

--- a/src/index.html
+++ b/src/index.html
@@ -142,6 +142,7 @@
     <div class="col-sm-8 px-0" id="map">
       <nav id="baseToggle"></nav>
       <div id='map-announce'></div>
+      <div class='text-danger hidden' id='server-offline'><h6>Server offline, functionality limited.</h6></div>
     </div>
     
     <!-- Right fixed pane for summary result display -->
