--- a/src/index.html
+++ b/src/index.html
@@ -54,6 +54,13 @@
   <div class="navbar-collapse collapse dual-nav w-50 order-2">
     <ul class="nav navbar-nav ml-auto">
       <li class="nav-item">
+        <!-- Button trigger modal -->
+        <a class="nav-link" href="#" data-toggle="modal" data-target="#modalVideo">Example video</a>
+        <!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal-video">
+            Launch demo modal
+        </button> -->
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="#" id="go-about">About</a>
       </li>
     </ul>
@@ -78,6 +85,9 @@
           </p>
           <hr class="my-4">
           <h3>Choose below to start exploring!</h3>
+          <p class="text-muted">
+            Or click <a href="#" data-toggle="modal" data-target="#modalVideo">here</a> to see how it works.
+          </p>
           <p class="lead">
             <button type="button" class="btn btn-primary btn-lg" id="go-plan-big">Plan pathways</button>
             <button type="button" class="btn btn-primary btn-lg" id="go-find-big">Find opportunities</button>
@@ -168,6 +178,29 @@
     </div>
   </div>
 
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="modalVideo" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Example usage</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <video width="100%" controls>
+          <source src="openelec_video.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video> 
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
 </div>
 
 </body>
