Add Tanzania (and warning because plan-nat model can't currently handle it)

--- a/src/index.html
+++ b/src/index.html
@@ -170,6 +170,7 @@
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
         <div class="modal-body">
+          <div id="loading-text"></div>
           <div class="progress progress-popup">
           <div class="progress-bar progress-bar-striped progress-bar-animated" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
