Use S3 instead of surge, fix some typos, pause video on close modal

--- a/src/index.html
+++ b/src/index.html
@@ -108,12 +108,12 @@
         <div class="text-width">
           <h1 class="display-4">About openelec</h1>
           <p class="lead">
-            A frontend to showcase some of the functionality of the open source tool openelec,
+            A front-end to showcase some of the functionality of the open source tool openelec,
             available <a href="https://github.com/carderne/openelec">here</a>. Please get in
             touch on my GitHub page.
           </p>
           <p class="lead">
-            I developed this following my experiences with electrixity access planning tools, which
+            I developed this following my experiences with electricity access planning tools, which
             are largely proprietary, expensive and bad. At the same time, there aren't many available
             tools for finding off-grid electricity access options that take advantage of all the data
             available and allow modelling freedom in choosing sites.
