--- a/src/index.html
+++ b/src/index.html
@@ -168,8 +168,9 @@
       <div class="modal-content">
         <div class="modal-body">
           <div id="loading-text"></div>
-          <div class="progress progress-popup">
-          <div class="progress-bar progress-bar-striped progress-bar-animated" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+            <h3 id="loading-message"></h3>
+            <div class="progress progress-popup">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
         </div>
       </div>
