Hide oobica link

--- a/src/index.html
+++ b/src/index.html
@@ -35,12 +35,12 @@
       <li class="nav-item active">
         <a class="brand navbar-brand pl-0" href="#" id="go-home">openelec</a>
       </li>
-      <li class="nav-item text-light px-3">
+      <!-- <li class="nav-item text-light px-3">
         by
         <a href="https://oobica.com">
           <img class="navbar-logo brand navbar-brand pl-0" src="oobica.png" alt="oobica">
         </a>
-      </li>
+      </li> -->
     </ul>
   </div>
 
