Add branding and email address

--- a/src/index.html
+++ b/src/index.html
@@ -35,12 +35,12 @@
       <li class="nav-item active">
         <a class="brand navbar-brand pl-0" href="#" id="go-home">openelec</a>
       </li>
-      <!-- <li class="nav-item text-light px-3">
+      <li class="nav-item text-light px-3">
         by
         <a href="https://oobica.com">
           <img class="navbar-logo brand navbar-brand pl-0" src="oobica.png" alt="oobica">
         </a>
-      </li> -->
+      </li>
     </ul>
   </div>
 
@@ -84,6 +84,7 @@
           <h3>Choose below to start exploring!</h3>
           <p class="text-muted">
             Or click <a href="#" data-toggle="modal" data-target="#modalVideo">here</a> to see how it works.
+            And <a href="mailto:chris@rdrn.me">chris@rdrn.me</a> to get in touch.
           </p>
           <p class="lead">
             <button type="button" class="btn btn-primary btn-lg" id="go-plan-big">Plan pathways</button>
@@ -110,7 +111,7 @@
           <p class="lead">
             A front-end to showcase some of the functionality of the open source tool openelec,
             available <a href="https://github.com/carderne/openelec">here</a>. Please get in
-            touch on my GitHub page.
+            touch on my GitHub page or here: <a href="mailto:chris@rdrn.me">chris@rdrn.me</a>
           </p>
           <p class="lead">
             I developed this following my experiences with electricity access planning tools, which
