Functional with dynamic time steps modelling

--- a/src/index.html
+++ b/src/index.html
@@ -151,6 +151,11 @@
       <nav id="baseToggle"></nav>
       <div id='map-announce'></div>
       <div class='text-danger hidden' id='server-offline'><h6>Server offline, functionality limited.</h6></div>
+      <div class='text-dark hidden' id='dynamic-box'>
+        <h6>Skip between time steps.</h6>
+        <button type="button" class="btn btn-secondary btn-sm" id="prev-step">Prev</button>
+        <button type="button" class="btn btn-secondary btn-sm" id="next-step">Next</button>
+      </div>
     </div>
     
     <!-- Right fixed pane for summary result display -->
