--- a/src/index.html
+++ b/src/index.html
@@ -143,7 +143,23 @@
       <h3 class="ml-3 hidden-sm-down text country-name"></h3>
       <button type="button" class="btn btn-primary btn-sm" id="run-model"></button>
       <button type="button" class="btn btn-secondary btn-sm" id="change-country">Change country</button>
-      <div class="py-3" id="sliders"></div>
+      <div class="py-3">
+        <div class="form-group">
+          <span class="switch switch-sm">
+            <span class="ttiptext">Whether to use dynamic time steps. Much slower, only enabled for small countries.</span>
+            <input type="checkbox" class="switch" id="switch-dynamic">
+            <label for="switch-dynamic">Use time steps</label>
+          </span>
+        </div>
+        <div class="form-group">
+          <span class="switch switch-sm">
+            <span class="ttiptext">Whether to override demand formula with MTF.</span>
+            <input type="checkbox" class="switch" id="switch-mtf">
+            <label for="switch-mtf">Use MTF levels</label>
+          </span>
+        </div>
+        <div id="sliders"></div>
+    </div>
     </div>
 
     <!-- Central flexible area for map -->
@@ -151,10 +167,10 @@
       <nav id="baseToggle"></nav>
       <div id='map-announce'></div>
       <div class='text-danger hidden' id='server-offline'><h6>Server offline, functionality limited.</h6></div>
-      <div class='text-dark hidden' id='dynamic-box'>
-        <h6>Skip between time steps.</h6>
-        <button type="button" class="btn btn-secondary btn-sm" id="prev-step">Prev</button>
-        <button type="button" class="btn btn-secondary btn-sm" id="next-step">Next</button>
+      <div class='text-dark center hidden' id='dynamic-box'>
+        <button type="button" class="btn btn-secondary btn-sm left" id="prev-step">Prev step</button>
+        <span class="h3 text-center" id="step-year">2025</span>
+        <button type="button" class="btn btn-secondary btn-sm right" id="next-step">Next step</button>
       </div>
     </div>
     
