Hack to fix height; h-100 not working in chrome

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 <body class="colorbg">
 
 <!-- Nav Bar -->
-<nav class="navbar navbar-dark navbar-expand-md navbar-dark justify-content-between shad">
+<nav class="navbar navbar-dark navbar-expand-md navbar-dark justify-content-between shad" style="height:6%;">
 
   <!-- Collapse button -->
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-nav">
@@ -67,7 +67,7 @@
 <!-- Main content container -->
 <!-- Only one 'row' within is visible at a time -->
 <!-- Controlled with the hidden class -->
-<div class="container-fluid flex-column h-100 d-flex">
+<div class="container-fluid flex-column d-flex" style="height:94%;">
 
   <!-- Landing page -->
   <div class="row flex-grow-1" id="landing">
