Default time steps to on

--- a/src/index.html
+++ b/src/index.html
@@ -147,7 +147,7 @@
         <div class="form-group">
           <span class="switch switch-sm">
             <span class="ttiptext">Whether to use dynamic time steps. Much slower, only enabled for small countries.</span>
-            <input type="checkbox" class="switch" id="switch-dynamic">
+            <input type="checkbox" class="switch" id="switch-dynamic" checked>
             <label for="switch-dynamic">Use time steps</label>
           </span>
         </div>
