Put staging config in vars.js

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
   <div class="navbar-collapse collapse dual-nav w-50 order-1 order-md-0">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="brand navbar-brand pl-0" href="#" id="go-home">openelec</a>
+          <a class="brand navbar-brand pl-0" href="#" id="go-home">openelec <%= htmlWebpackPlugin.options.tag %></a>
       </li>
     </ul>
   </div>
