Fix bootstrap btn style change

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
   </button>
 
   <!-- Left aligned links -->
-  <div class="navbar-collapse collapse dual-nav w-50 order-1 order-md-0">
+  <div class="navbar-collapse collapse dual-nav w-25 order-1 order-md-0">
     <ul class="navbar-nav">
       <li class="nav-item active">
           <a class="brand navbar-brand pl-0" href="#" id="go-home">openelec <%= htmlWebpackPlugin.options.tag %></a>
@@ -40,12 +40,12 @@
 
   <!-- Middle button group -->
   <div class="btn-group justify-content-center order-2" data-toggle="buttons">
-    <button type="button" class="btn" id="go-plan">Plan pathways</button>
-    <button type="button" class="btn" id="go-find">Find opportunities</button>
+    <button type="button" class="btn btn-primary" id="go-plan">Plan pathways</button>
+    <button type="button" class="btn btn-primary" id="go-find">Find opportunities</button>
   </div>
 
   <!-- Right aligned links -->
-  <div class="navbar-collapse collapse dual-nav w-50 order-2">
+  <div class="navbar-collapse collapse dual-nav w-25 order-2">
     <ul class="nav navbar-nav ml-auto">
       <li class="nav-item">
         <!-- Button trigger modal -->
